Release notes for production domapp -- jacobsen@npxdesigns.com

domapp V00-03-05  6/1/2006 CDT
        For release as part of DOM-MB 415

Upgrades/bug fixes:
- Fix missing comment delim. in messageAPIstatus.h and goofy return error masks
- Issue 443 - don't fail out of SN event loop when HAL indicates overflow
- Issue 442 - add message to indicate number of LBM overflows

=========================================================


domapp V00-03-04  2/4/2006 NZT
        Requires DOM-MB version 405
        Requires domapp.sbi tag build340

Upgrades/bug fixes:
- Tighten up look back memory to treat "memory avalanch" problem
  seen in surface DAQ

=========================================================

domapp V00-03-03  2/2/2006 NZT
        Requires DOM-MB version 405
        Requires domapp.sbi tag build340

Upgrades/bug fixes:
- Added more ASCII monitoring output during LC configuration
- Upgrade to DOM-MB 405

=========================================================

domapp V00-03-02  1/24/2006 CST
        Requires DOM-MB version 404
        Requires domapp.sbi tag build340

Upgrades/bug fixes:
- Software same as V00-03-01
- New FPGA fixes LC problem with 5.1 boards

=========================================================

domapp V00-03-01  1/14/2006 CST
	Requires DOM-MB version 404
	Requires domapp.sbi tag build329

Upgrades/bug fixes:
- Use new domapp FPGA which fixes LC/heartbeat interaction.
- Fix bug with extra bits contaminating FADC/ATWD data 
  (keep only 10 bits)
- Fix DSC_QUERY_PMT_HV and documentation to return only 
  2 shorts: ADC and DAC HV settings
- Rearrange engineering format code slightly to allow for
  the possibility of e.g. forced+SPE trig in the same time
  slice - in which case SPE takes precedence in format.
  I.e., if Thorsten says:        I say:
            FORCED+SPE           type 2
            FLASHER+FORCED       type 3
            FLASHER+SPE          type 3
            FLASHER+FORCED+SPE   type 3
