@@ -34,6 +34,7 @@
 #define DAC_CANT_ENABLE_FB       "DAC: Can't enable flasher board"
 #define DAC_CANT_GET_FB_SERIAL   "DAC: Can't get flasher board serial number"
 #define DAC_BAD_LBM_DEPTH        "DAC: LBM depth out of range"
+#define DAC_SN_NOT_INIT          "DAC: Supernova not initialized"
 
 /* define ALLOCATE_READOUT_BUFFER if you want dataAccess
    to allocate memory to be used for FPGA simulation.
@@ -56,5 +57,5 @@ void dataAccessInit(void);
 void dataAccess(MESSAGE_STRUCT *M);
 
 int data_access_unit_tests(void);
-
+int fillMsgWithMoniData(MESSAGE_STRUCT *M);
 #endif
