@@ -1,0 +1,10 @@
+#ifndef __INTERVAL_H
+#define __INTERVAL_H
+
+void interval_init();
+void interval_start();
+void interval_force_stop();
+int interval_service(MESSAGE_STRUCT *M);
+
+#endif
+
