@@ -1,1 +1,1 @@
-#define DOMAPP_RELEASE "V00-03-05"
+#define DOMAPP_RELEASE "V00-03-06"
